--- a/package.json
+++ b/package.json
@@ -1,9 +1,27 @@
 {
   "name": "vue-table-with-tree-grid",
-  "version": "0.2.0",
-  "description": "vue-table-with-tree-grid",
+  "version": "0.2.1",
+  "description": "A table (with tree-grid) component for Vue.js 2.0. (Its style extends iView)",
+  "keywords": [
+    "vue",
+    "vue-table",
+    "tree-grid",
+    "vue-component",
+    "vue-jsx"
+  ],
   "author": "GaoQi <taki.gaoqi@outlook.com>",
+  "homepage": "https://github.com/MisterTaki/vue-table-with-tree-gird",
+  "bugs": "https://github.com/MisterTaki/vue-table-with-tree-gird/issues",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MisterTaki/vue-table-with-tree-gird"
+  },
   "main": "lib/vue-table-with-tree-grid.js",
+  "files": [
+    "lib",
+    "src"
+  ],
+  "license": "MIT",
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js"
