--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue-table-with-tree-grid",
-  "version": "0.2.4",
-  "description": "A table (with tree-grid) component for Vue.js 2.0. (Its style extends iView)",
+  "name": "vue-tree-view-table",
+  "version": "0.1.2",
+  "description": "A table (with tree-grid) component for Vue.js 2.0. (Its style extends vue-table-with-tree-grid)",
   "keywords": [
     "vue",
     "vue-table",
@@ -9,17 +9,10 @@
     "vue-component",
     "vue-jsx"
   ],
-  "author": "GaoQi <taki.gaoqi@outlook.com>",
-  "homepage": "https://github.com/MisterTaki/vue-table-with-tree-gird",
-  "bugs": "https://github.com/MisterTaki/vue-table-with-tree-gird/issues",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/MisterTaki/vue-table-with-tree-gird"
-  },
-  "main": "lib/vue-table-with-tree-grid.js",
+  "author": "Alexito <alexitowy@gmail.com>",
+  "main": "lib/vue-tree-view-table.js",
   "files": [
     "lib",
-    "example",
     "src"
   ],
   "license": "MIT",
@@ -29,7 +22,6 @@
   },
   "dependencies": {
     "global": "^4.4.0",
-    "json-server": "^0.15.0",
     "popper.js": "^1.15.0",
     "vue": "^2.4.3"
   },
@@ -59,6 +51,7 @@
     "eventsource-polyfill": "^0.9.6",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.30.1",
+    "json-server": "^0.15.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "opn": "^5.1.0",
